add list-users feature

--- a/social-sharing-app-server/src/main/resources/application.yaml
+++ b/social-sharing-app-server/src/main/resources/application.yaml
@@ -4,3 +4,8 @@ spring:
       enabled: true
   datasource:
     generate-unique-name: false
+  data:
+    web:
+      pageable:
+        default-page-size: 10
+        max-page-size: 100
