--- a/social-sharing-app-server/src/main/resources/application.yaml
+++ b/social-sharing-app-server/src/main/resources/application.yaml
@@ -1,3 +1,10 @@
+social-sharing-app:
+  images:
+    profile:
+      upload-path: social-sharing-app-server/images/profile
+    posts:
+      upload-path: social-sharing-app-server/images/posts
+
 spring:
   h2:
     console:
